--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,3 +15,6 @@ jobs:
         with:
           python-version: '3.11'
       - run: python3 --version
+      - run: pip3 install pyinstaller
+      - run: pip3 install -r requirements.
+      - run: pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
