--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,35 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  pull_request:
+    types: [opened, reopened, synchronize]
+
+permissions:
+  contents: read
 
 jobs:
-  windows:
-    runs-on: windows-latest
+  build:
+    name: Build for ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            # artifact_name: mything
+            # asset_name: mything-linux-amd64
+          - os: windows-latest
+            # artifact_name: mything.exe
+            # asset_name: mything-windows-amd64
+          - os: macos-latest
+            # artifact_name: mything
+            # asset_name: mything-macos-amd64
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - run: pip3 install pyinstaller
-      - run: pip3 install -r requirements.txt
-      - run: pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
+      - run: |
+          pip3 install pyinstaller
+          pip3 install -r requirements.txt
+          pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
+          ls dist
