--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -15,6 +15,9 @@ jobs:
       pull-requests: write
       checks: write
     runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ steps.step1.outputs.tag_name }}
+      upload_url: ${{ steps.step1.outputs.upload_url }}
     steps:
       - uses: release-drafter/release-drafter@v5
         env:
@@ -28,10 +31,10 @@ jobs:
         include:
           - os: windows-latest
             app: pdf-extracter.exe
-            asset_name: pdf-extracter-win-${{ steps.draft_release.outputs.tag_name }}.exe
+            asset_name: pdf-extracter-win-${{ needs.draft_release.outputs.tag_name }}.exe
           - os: macos-latest
             app: pdf-extracter.app
-            asset_name: pdf-extracter-mac-${{ steps.draft_release.outputs.tag_name }}.app
+            asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -48,7 +51,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.draft_release.outputs.upload_url }}
+          upload_url: ${{ needs.draft_release.outputs.upload_url }}
           asset_path: dist/${{ matrix.app }}
           asset_name: ${{ matrix.asset_name }}
           asset_content_type: application/zip
