--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -39,23 +39,22 @@ jobs:
             asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
             mime: application/zip
     steps:
-      - run: echo ${{needs.draft_release.outputs.tag_name}} ${{needs.draft_release.outputs.upload_url}}
-      # - uses: actions/checkout@v3
-      # - uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.11'
-      # - name: Build
-      #   run: |
-      #     pip3 install pyinstaller
-      #     pip3 install -r requirements.txt
-      #     pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
-      # - name: Upload Release Asset
-      #   id: upload-release-asset 
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ needs.draft_release.outputs.upload_url }}
-      #     asset_path: dist/${{ matrix.app }}
-      #     asset_name: ${{ matrix.asset_name }}
-      #     asset_content_type: ${{ matrix.mime }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Build
+        run: |
+          pip3 install pyinstaller
+          pip3 install -r requirements.txt
+          pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.draft_release.outputs.upload_url }}
+          asset_path: dist/${{ matrix.app }}
+          asset_name: ${{ matrix.asset_name }}
+          asset_content_type: ${{ matrix.mime }}
