--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -57,4 +57,4 @@ jobs:
           upload_url: ${{ needs.draft_release.outputs.upload_url }}
           asset_path: dist/${{ matrix.app }}
           asset_name: ${{ matrix.asset_name }}
-          asset_content_type: ${{ matrix.mime }}
+          # asset_content_type: ${{ matrix.mime }}
