--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -34,6 +34,7 @@ jobs:
             app: pdf-extracter.exe
             asset_name: pdf-extracter-win-${{ needs.draft_release.outputs.tag_name }}.exe
             # mime: application/vnd.microsoft.portable-executable
+            mime: application/zip
           - os: macos-latest
             app: pdf-extracter.app
             asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
@@ -57,4 +58,4 @@ jobs:
           upload_url: ${{ needs.draft_release.outputs.upload_url }}
           asset_path: dist/${{ matrix.app }}
           asset_name: ${{ matrix.asset_name }}
-          # asset_content_type: ${{ matrix.mime }}
+          asset_content_type: ${{ matrix.mime }}
