--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -35,9 +35,9 @@ jobs:
             asset_name: pdf-extracter-win-${{ needs.draft_release.outputs.tag_name }}.exe
             # mime: application/vnd.microsoft.portable-executable
             mime: application/zip
-          - os: macos-latest
-            app: pdf-extracter.app
-            asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
+          # - os: macos-latest
+          #   app: pdf-extracter.app
+          #   asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
           #   mime: application/zip
     steps:
       - uses: actions/checkout@v3
