--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,6 +1,7 @@
 name: Release Drafter
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -32,14 +33,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: windows-latest
-            app: pdf-extracter.exe
-            asset_name: pdf-extracter-win-${{ needs.draft_release.outputs.tag_name }}.exe
-            mime: application/zip
-          # - os: macos-latest
-          #   app: pdf-extracter
-          #   asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
+          # - os: windows-latest
+          #   app: pdf-extracter.exe
+          #   asset_name: pdf-extracter-win-${{ needs.draft_release.outputs.tag_name }}.exe
           #   mime: application/zip
+          - os: macos-latest
+            app: pdf-extracter
+            asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
+            mime: application/zip
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -50,6 +51,7 @@ jobs:
           pip3 install pyinstaller
           pip3 install -r requirements.txt
           pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
+          ls dist
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
@@ -61,15 +63,15 @@ jobs:
           asset_name: ${{ matrix.asset_name }}
           asset_content_type: ${{ matrix.mime }}
 
-  publish:
-    runs-on: ubuntu-latest
-    permissions: write-all
-    needs:
-      - draft_release
-      - build
-    steps:
-      - uses: eregon/publish-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          release_id: ${{ needs.draft_release.outputs.id }}
+  # publish:
+  #   runs-on: ubuntu-latest
+  #   permissions: write-all
+  #   needs:
+  #     - draft_release
+  #     - build
+  #   steps:
+  #     - uses: eregon/publish-release@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         release_id: ${{ needs.draft_release.outputs.id }}
