--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -38,8 +38,8 @@ jobs:
           #   asset_name: pdf-extracter-win-${{ needs.draft_release.outputs.tag_name }}.exe
           #   mime: application/zip
           - os: macos-latest
-            app_build: pdf-extracter.app
-            asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.app
+            app_build: pdf-extracter.dmg
+            asset_name: pdf-extracter-mac-${{ needs.draft_release.outputs.tag_name }}.dmg
             mime: application/zip
     steps:
       - uses: actions/checkout@v3
@@ -47,12 +47,19 @@ jobs:
         with:
           python-version: '3.11'
       - name: Build
-        # remove unused mac files below
         run: |
           pip3 install pyinstaller
           pip3 install -r requirements.txt
           pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
-          ls dist
+      - name: Bundle .dmg
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: |
+          brew install create-dmg
+          mkdir -p dist/dmg
+          rm -rf dist/dmg/*
+          cp -r dist/pdf-extracter.app dist/dmg
+          rm -rf dist/pdf-extracter.dmg
+          create-dmg --volname "Extraktor příloh PDF" --app-drop-link 425 120 --no-internet-enable "dist/pdf-extracter.dmg" "dist/dmg/"
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
