--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -50,7 +50,12 @@ jobs:
         run: |
           pip3 install pyinstaller
           pip3 install -r requirements.txt
-          pyinstaller --onefile --noconsole --clean --name pdf-extracter gui.py
+      - name: pyinstaller ${{ matrix.os }}
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: pyinstaller --onefile --noconsole --clean --add-data 'font:font' --name pdf-extracter gui.py
+      - name: pyinstaller ${{ matrix.os }}
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: pyinstaller --onefile --noconsole --clean --add-data 'font;font' --name pdf-extracter gui.py
       - name: Bundle .dmg
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
